--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "hexo-server": "^2.0.0",
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-theme-landscape": "^0.0.3"
+  },
+  "devDependencies": {
+    "javascript-obfuscator": "^4.0.2"
   }
 }
