--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -2,7 +2,7 @@
   class_desc: 是友联呀~
   link_list:
     - name: Chengwei Design
-      link: https://chengwei.design/
+      link: https://chengwei.me/
       # avatar: 
       descr: Wavie是什么呢……
     - name: ⑨BIE
