Update: friend link

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -4,7 +4,7 @@
     - name: Chengwei Design
       link: https://chengwei.me/
       # avatar: 
-      descr: Wavie是什么呢……
+      descr: Wavie 是什么呢……
     - name: ⑨BIE
       link: https://9bie.org/
       avatar: https://9bie.org/BIE.jpg
@@ -16,7 +16,7 @@
     - name: zcmimi
       link: https://blog.zcmimi.top/
       avatar: https://blog.zcmimi.top/img/avatar.webp
-      descr: 一个菜鸡OIer,是archlinuxer
+      descr: 一个菜鸡 OIer，是 archlinuxer
     - name: 奈の斯
       link: https://nai.si/
       avatar: https://nai.si/avatar.jpg
@@ -38,15 +38,15 @@
       link: https://www.kskb.eu.org/
       avatar: https://avatars.githubusercontent.com/u/73118488
       descr: 小小的部落格
-    - name: 梓瑶233
+    - name: 梓瑶 233
       link: https://blog.ziyao233.xyz/
     - name: starmoe
       link: https://hexo.hydi.xyz/
       avatar: https://bro-xun.github.io/sources/pic/BroXun.webp%E2%80%9D
       descr: 一只什么也不会的 Linuxer
     - name: Vincent 文朔
-      link: https://blog.vincent1230.top/
-      avatar: https://a.vincent1230.top/blogrol/avatar.jpg
+      link: https://blog.vincy1230.net/
+      avatar: https:////a.vincy1230.net/blogroll/avatar.jpg
       descr: 太阳出来了 雾就会散的
 
 
@@ -55,7 +55,7 @@
   link_list:
     - name: Firpe
       link: https://firpe.cn/
-      descr: 是超好用的PE系统呢！
+      descr: 是超好用的 PE 系统呢！
     - name: Butterfly
       link: https://butterfly.js.org/
       descr: 使用的主题的网站
